# FitCam

./: .gitignore  ACV_23_part2.py  README.md  classes.py  fitness_poses_csvs_out.csv  preprocess.py  preprocess_yoga.py  pyproject.toml  run_webcam.py
.github/workflows/: publish_to_testpypi.yml
YogaData_csvs_out_copy/: downdog.csv  warrior2.csv
data/: goddess.csv  tree.csv
fitcam/: classes.py  main.py  preprocess.py  run_video.py  run_webcam.py
fitness_poses_csvs_out/: pushups_down.csv  pushups_up.csv
