[tool.poetry]
name = "fitcam"
version = "0.3.5.dev"
description = "Yoga App 4.0 using AI"
authors = ["raphael_campus <raphael.bouvet@le-campus-numerique.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Pillow = "^9.4.0"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
opencv-python = "^4.7.0"
tqdm = "^4.65.0"
requests = "^2.28.2"
mediapipe = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
webcam = "fitcam.main:main"
preprocess = "fitcam.preprocess:preprocess"